Tabs alignments fix

--- a/src/core/components/toolbar/toolbar.css
+++ b/src/core/components/toolbar/toolbar.css
@@ -41,6 +41,7 @@
 }
 .zm-toolbar-actions-context {
   grid-area: context;
+  height: 100%;
 }
 .zm-toolbar-actions-workspace {
   grid-area: workspace;
