--- a/src/core/directives/tabs/tabs.css
+++ b/src/core/directives/tabs/tabs.css
@@ -114,7 +114,7 @@
   display: grid;
   grid-auto-flow: column;
   grid-gap: 0.5rem;
-  padding: 0.25rem 1.5rem;
+  padding: 0.25rem 1rem;
   height: 100%;
   box-sizing: border-box;
 }
